<resources>
    <string name="app_name">Escape Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escape_game">Escape Game</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="pseudo">Pseudo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_session">Create Session</string>
    <string name="join_session">JOIN SESSION</string>


    <string name="dialog_NFC">Please turn on NFC to use TagReader</string>
    <string name="settings">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="EnigmeStory"> In computer programming, data binding is a general technique that binds data sources from the provider and consumer together and synchronizes them. This is usually done with two data/information sources with different languages as in XML data binding and UI data binding. In UI data binding, data and information objects of the same language but different logic function are bound together (e.g. Java UI elements to Java objects).[1]

In a data binding process, each data change is reflected automatically by the elements that are bound to the data. The term data binding is also used in cases where an outer representation of data in an element changes, and the underlying data is automatically updated to reflect this change. As an example, a change in a TextBox element could modify the underlying data value.[2]  In computer programming, data binding is a general technique that binds data sources from the provider and consumer together and synchronizes them. This is usually done with two data/information sources with different languages as in XML data binding and UI data binding. In UI data binding, data and information objects of the same language but different logic function are bound together (e.g. Java UI elements to Java objects).[1]</string>


    <string name="text_intro">Bonjour et bienvenue dans le jeu, vous êtes ici car, vous avez pour réputation d \'être les meilleures défectifs de la vie.
Pour sortir de cette pièce, vous allez devoir résoudre des énigmes, qui vous permettront de déverrouiller la porte de sortie.
Une des énigme est optionnelle, elle vous permettra de gagner du temps, si vous n\'arrivez pas à sortir de la pièce vous y resterai à jamais et vous condamnerez avec la quatrième victime.
        Bon chance</string>
    <string name="text_enigme1">Une femme se lève un matin, en ouvrant la porte d’entrée de sa maison elle trouve 4 nombre inscrit sur sa porte avec un couteau le lendemain, en se réveillant elle trouve 4 nombre de plus inscrit sur la porte, les jours passent et les nombres viennent s’ajouter, un jour elle décide de ne pas dormir et de surveiller la porte d’entrée pour voir qui écrit ces nombres sur sa porte, elle attend pendant des heures et personne ne vient. À 4h30 de matin elle décide de s’endormir, le lendemain matin, elle est retrouvée morte dans son lit. Voici la photo de la porte d’entrée et la scène de crime.
Que représente ces nombres ?</string>
    <string name="text_enigme21">Un homme est retrouvé mort dans sa maison, gisant dans sa propre marre de sang, dans sa main gauche il tenait une note et dans sa main droite il tenait un téléphone.
Voici une photo de la note qu’il tenait dans sa main, on dirait qu’il essayé de faire passer un message avant de se faire tuer,
 Mais ne pas réussir à le finir, essayer de déchiffrer ce qui y est écrit sur la note ?</string>
    <string name="text_enigme22">Un homme est retrouvé mort dans sa maison, gisant dans sa propre marre de sang, dans sa main gauche il tenait une note et dans sa main droite il tenait un téléphone.
Voici une photo du téléphone qu’il tenait dans sa main.</string>
    <string name="text_enigme3">Un homme est retrouvé mort dans sa maison, étaler sur son bureau.
Avant de mourir, il avait griffonné pleine de lettres et des chiffres sur des feuilles et des lettres. Un détaille a attiré la tension des enquêteurs.
 La victime a écrit « live = à quoi » voici une photo de la scène, qui vous permettra de mieux comprendre « live = à quoi »</string>
    <string name="text_enigme_final">Pour ouvrir cette porte, vous aurez besoin du bon code.
Cette porte vous permettra de sortir d’ici et d’avoir l’adresse de la quatrième victime, vous pouvez donc la sauver.
Le nombre « 6 » est interdit, vous ne pouvez pas utiliser le nombre « 6 ».
</string>
    <string name="text_enigme_temps">Cette énigme vous permettra de gagner du temps. Vous etes coincés dans un
        immeuble qui s\'éffondre, il n\'ya plus de courant, l’une des quatre portes vous permettra de vivre. Choisissez la bonne porte ?!.
    </string>

    <!--        code BlueTooth      -->
    <!--non afficher à l'utilisateur-->
    <string name="notification_channel_id" translatable="false">my_notification_channel_id</string>
    <string name="notification_channel_name">Server blueTooth updates notifications</string>
    <string name="notification_channel_description">Notify when updates are done</string>
    <!--    afficher à l'utilisateur-->
    <string name="title_notification_foreground">Serveur Bluetooth en écoute ... </string>
    <string name="button_notification_foreground">J\'arrête le serveur Bluetooth de notifications</string>
    <string name="error">Un probléme est survenu</string>
    <string name="ask_for_enable_gps">Veuillez activer le GPS pour scanner</string>
    <string name="server_unavailable">Le serveur Bluetooth n\'est pas trouvé, Vérifier que Bluetooth serveur est discovrable, et réessayer</string>
    <string name="server_available">En cours de connexion avec serveur Bluetooth ...</string>
    <string name="ask_for_scanner_activer">Cliquer sur Scan pour scanner/activer Bluetooth</string>
    <string name="ask_for_scan">Aucun device Bluetooth n\'est trouvé, appuyer sur Scan pour la recherche.</string>
    <string name="ask_for_scan_q">Aucun device Bluetooth n\'est trouvé, appuyer sur Scan (le GPS doit être activé).</string>
    <string name="is_running">Le serveur Bluetooth est déjà lancé !!.</string>
    <string name="ask_for_enable_bluetooth">Cliquer sur Scan pour activer Bluetooth</string>
    <string name="isnt_running">Serveur Bluetooth non lancé</string>
    <string name="scan">Scanner ...</string>
    <string name="discovarability">Discovarability ...</string>
    <!--    fin code BlueTooth      -->

</resources>